test/functions/return-type-class-hierarchy/owned-child1-borrowed-child2.good
owned-child1-borrowed-child2.chpl:7: error: unable to resolve return type
